Minor changes to tex and readme.

--- a/companion_applied_mathematics_sorted.tex
+++ b/companion_applied_mathematics_sorted.tex
@@ -19,7 +19,9 @@
 \maketitle
 
 This is the bibliography for the articles in 
-\href{http://www.ma.man.ac.uk/~higham/pcam/index.php}{The Princeton Companion to Applied Mathematics} \cite{higham15PCAM}.
+\href{http://www.ma.man.ac.uk/~higham/pcam/index.php}{The Princeton
+  Companion to Applied Mathematics} \cite{higham15PCAM}
+sorted by author name.
 
 \nocite{*}
 
