--- a/companion_applied_mathematics_unsorted.tex
+++ b/companion_applied_mathematics_unsorted.tex
@@ -19,8 +19,10 @@
 \maketitle
 
 This is the bibliography for the articles in 
-\href{http://www.ma.man.ac.uk/~higham/pcam/index.php}{The Princeton Companion to Applied Mathematics} \cite{higham15PCAM}.
-
+\href{http://www.ma.man.ac.uk/~higham/pcam/index.php}{The Princeton
+  Companion to Applied Mathematics} \cite{higham15PCAM}
+arranged in the order in which the articles appear in the book
+(which is the order in the bib file).
 
 \nocite{*}
 
