Corrected two typos.

--- a/companion_applied_mathematics.bib
+++ b/companion_applied_mathematics.bib
@@ -2,7 +2,7 @@
 %%% BibTeX-file{
 %%%     author          = "Nicholas J. Higham",
 %%%     version         = "1.00",
-%%%     date            = "September 13, 2015",
+%%%     date            = "September 15, 2015",
 %%%     filename        = "companion_applied_mathematics.bib",
 %%%     address         = "School of Mathematics
 %%%                        University of Manchester
@@ -361,7 +361,7 @@
 
 @incollection{higham15l,
   author = "Nicholas J. Higham",
-  title = "The Jordan Canonical Form",
+  title = "The {Jordan} Canonical Form",
   editor = "Nicholas J. Higham and Mark R. Dennis and Paul Glendinning and
             Paul A. Martin and Fadil Santosa and Jared Tanner",
   booktitle = "The Princeton Companion to Applied Mathematics",
@@ -2297,7 +2297,7 @@
 
 @incollection{yuan15,
   author = "{Ya-xiang} Yuan",
-  title = "How {Chinese} Mathematians Influence Government",
+  title = "How {Chinese} Mathematicians Influence Government",
   editor = "Nicholas J. Higham and Mark R. Dennis and Paul Glendinning and
             Paul A. Martin and Fadil Santosa and Jared Tanner",
   booktitle = "The Princeton Companion to Applied Mathematics",
